@@ -11,6 +11,7 @@ Included
 - Gate enforces docs/update discipline: code changes without operator-facing doc updates fail with `VERIFY360_DOC_SYNC_MISSING`.
 - Gate now uses explicit state progression and two-phase output finalize (`stage -> finalize`) with `verify_360_output_manifest.json`.
 - Gate now runs adapter maintenance doctor during verify (`adapter_doctor` step), with optional strict mode via `WEFTEND_360_ADAPTER_DOCTOR_STRICT=1` (strict failures are recorded as explicit PARTIAL evidence with reason codes).
+- `verify:360` now captures adapter doctor output quietly (no raw doctor JSON console dump) while preserving step evidence in the verify receipt/report.
 - Safe-run now enforces a non-blocking evidence corridor check before completion:
 - Expected receipt artifacts are verified for presence and digest consistency.
 - Pre-existing/stale unmanaged output files anywhere under the run out-root are flagged as orphan evidence.
